syntax = "proto3";

package api.requestEth.v1;

import "google/api/annotations.proto";

option go_package = "requestEth/api/requestEth/v1;v1";
option java_multiple_files = true;
option java_package = "dev.kratos.api.helloworld.v1";
option java_outer_classname = "HelloworldProtoV1";

service Transaction {
  rpc UsdtBalance (UsdtBalanceRequest) returns (UsdtBalanceReply) {
    option (google.api.http) = {
      get: "/api/usdt_balance"
    };
  }
}

message UsdtBalanceRequest {
  string address = 1;
}

message UsdtBalanceReply {
  string balance = 1;
  string err = 2;
}